--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
       <div class="row">
         <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1 data-aos="fade-up">Grow your business with Voma Tech</h1>
-          <h2 data-aos="fade-up" data-aos-delay="400">VomaTech is web design company in Dhanbad, delivering exceptional website & App development, logo design and social media marketing.</h2>
-          <h3 data-aos="fade-up" data-aos-delay="900">Use vast designing and development experience to release your digital product fast and in budget.</h3>
+          <h2 data-aos="fade-up" data-aos-delay="400">VomaTech is web design company in Dhanbad, delivering exceptional website & App development, logo design and social media marketing to build your digital product fast and in budget.</h2>
+         
           <div data-aos="fade-up" data-aos-delay="900">
             <!-- <a href="#about" class="btn-get-started scrollto">Get Started</a> -->
           </div>
