--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <div class="row">
       <div class="col-md-6 d-flex align-items-stretch">
         <div class="card"   data-aos="fade-up" data-aos-delay="100">
-          <img class="card-img-top" src="assets/img/homeIcons/4411631.jpg" alt="Card image cap" height="400">
+          <img class="card-img-top" src="assets/img/homeIcons/4411631.jpg" alt="Card image cap" height="350">
           <div class="card-body">
             <h5 class="card-title"><a href="">Web Development</a></h5>
             <p class="card-text">We excell in both large, complex portals and smaller, campaign landing pages, that load fast and look amazing.</p>
@@ -122,7 +122,7 @@
       </div>
       <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
         <div class="card"   data-aos="fade-up" data-aos-delay="200">
-          <img class="card-img-top" src="assets/img/homeIcons/4478107.jpg" alt="Card image cap" height="400">
+          <img class="card-img-top" src="assets/img/homeIcons/4478107.jpg" alt="Card image cap" height="350">
           <div class="card-body">
             <h5 class="card-title"><a href="">Mobile App Development</a></h5>
             <p class="card-text">We use the best practices in UI execution and optimised, lightweight backends to deliver apps that look great & work fast.</p>
@@ -132,7 +132,7 @@
       </div>
       <div class="col-md-6 d-flex align-items-stretch mt-4">
         <div class="card"   data-aos="fade-up" data-aos-delay="100">
-          <img class="card-img-top" src="assets/img/homeIcons/30942.jpg" alt="Card image cap" height="400">
+          <img class="card-img-top" src="assets/img/homeIcons/30942.jpg" alt="Card image cap" height="350">
           <div class="card-body">
             <h5 class="card-title"><a href="">UI/UX & Product Design</a></h5>
             <p class="card-text">We designed multiplatform product interfaces. With this amount of experience, nothing is impossible!</p>
@@ -142,7 +142,7 @@
 
       <div class="col-md-6 d-flex align-items-stretch mt-4">
         <div class="card" data-aos="fade-up" data-aos-delay="200">
-          <img class="card-img-top" src="assets/img/homeIcons/4799410.jpg" alt="Card image cap" height="400">
+          <img class="card-img-top" src="assets/img/homeIcons/4799410.jpg" alt="Card image cap" height="350">
           <div class="card-body">
             <h5 class="card-title"><a href="">Systems Design & Automation</a></h5>
             <p class="card-text">Design systems are a set of processes, that save you time and money, so you can focus on innovating.</p>
@@ -407,18 +407,7 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="400">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/homeIcons/Screen Shot 2020-05-25 at 5.08.34 PM.png"  alt="" height="400" width="700">
-              <div class="portfolio-info">
-                <h4>Cocktail of the day</h4>
-                <p>App</p>
-                <div class="portfolio-links">
-                  <a href="http://sawcocktail.netlify.app" target="_blank"  title="Cocktail of the day"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div> 
+          
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
@@ -432,6 +421,19 @@
               </div>
             </div>
           </div>
+          
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/homeIcons/Screen Shot 2020-05-25 at 5.08.34 PM.png"  alt="" height="400" width="700">
+              <div class="portfolio-info">
+                <h4>Cocktail of the day</h4>
+                <p>App</p>
+                <div class="portfolio-links">
+                  <a href="http://sawcocktail.netlify.app" target="_blank"  title="Cocktail of the day"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div> 
 
           <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
@@ -926,7 +928,7 @@
           </div>
 
           <div class="col-lg-5 col-md-12" data-aos="fade-up" data-aos-delay="300">
-            <form  method="post" role="form" class="php-email-form" netlify>
+            <form  method="post" action="forms/contact.php" role="form" class="php-email-form" netlify>
               <div class="form-group">
                 <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                 <div class="validate"></div>
