--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@
           </div>
 
           <div class="col-lg-5 col-md-12" data-aos="fade-up" data-aos-delay="300">
-            <form   action="contact_process.php" role="form" class="php-email-form" method="post" id="contactForm" novalidate="novalidate" netlify>
+            <form   action="" class="php-email-form" method="post" id="contactForm" novalidate="novalidate" netlify>
               <div class="form-group">
                 <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                 <div class="validate"></div>
