--- a/index.html
+++ b/index.html
@@ -931,25 +931,31 @@
             <form class="row contact_form" action="contact_process.php" method="post" id="contactForm" novalidate="novalidate"  data-netlify="true">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name">
-                            </div>
+                                <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" >
+                            <div class="validate"></div>
+                          </div>
                             <div class="form-group">
-                                <input type="email" class="form-control" id="email" name="email" placeholder="Enter email address">
-                            </div>
+                                <input type="email" class="form-control" id="email" name="email" placeholder="Enter email address" data-rule="email" data-msg="Please enter a valid email">
+                            <div class="validate"></div>
+                          </div>
                             <div class="form-group">
-                                <input type="text" class="form-control" id="subject" name="subject" placeholder="Enter Subject">
-                            </div>
+                                <input type="text" class="form-control" id="subject" name="subject" placeholder="Enter Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject">
+                            <div class="validate"></div>
+                          </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <textarea class="form-control" name="message" id="message" rows="1" placeholder="Enter Message"></textarea>
-                            </div>
+                                <textarea class="form-control" name="message" id="message" rows="4" placeholder="Enter Message" data-rule="required" data-msg="Please write something for us"></textarea>
+                            <div class="validate"></div>
+                          </div>
                         </div>
-                        <div class="col-md-12 text-right">
-                            <button type="submit" value="submit" class="primary_btn">
-                                <span>Send Message</span>
-                            </button>
-                        </div>
+                        <div class="mb-3">
+                <div class="loading">Loading</div>
+                <div class="error-message"></div>
+                <div class="sent-message">Your message has been sent. Thank you!</div>
+              </div>
+              <div class="text-center"><button type="submit">Send Message</button></div>
+           
                     </form>
           </div>
 
