--- a/index.html
+++ b/index.html
@@ -945,11 +945,11 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <textarea class="form-control" name="message" id="message" rows="4" placeholder="Enter Message" data-rule="required" data-msg="Please write something for us"></textarea>
+                                <textarea class="form-control" name="message" id="message" rows="5" placeholder="Enter Message" data-rule="required" data-msg="Please write something for us"></textarea>
                             <div class="validate"></div>
                           </div>
                         </div>
-                        <div class="mb-3">
+                        <div class="form-group">
                 <div class="loading">Loading</div>
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
