--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta content="VomaTech is web design company in Dhanbad, website & App development" name="description">
   <meta content="VomaTech is web design company in Dhanbad, website & App development" name="keywords">
 
-  <!-- Favicons 
-  <link href="assets/img/favicon.png" rel="icon">-->
+  <!-- Favicons -->
+  <link href="assets/img/apple-touch-icon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
