--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Voma Tech</title>
-  <meta content="VomaTech is web design company in Dhanbad, website & App development" name="description">
-  <meta content="VomaTech is web design company in Dhanbad, website & App development" name="keywords">
+  <meta content="VomaTech is web design company in Dhanbad, delivering exceptional website & App development, logo design and social media marketing to build your digital product fast and in budget." name="description">
+ <!-- <meta content="VomaTech is web design company in Dhanbad, website & App development" name="keywords">-->
 
   <!-- Favicons -->
   <link href="assets/img/apple-touch-icon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <!--<link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">-->
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
