--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
   
 
     <!-- ======= Portfolio Section ======= -->
-     <section id="portfolio" class="portfolio">
+    <!-- <section id="portfolio" class="portfolio">
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
@@ -537,7 +537,7 @@
 
       </div>
     </section>
-  
+  -->
     
     <!-- End Portfolio Section -->
 
@@ -911,19 +911,19 @@
             <div class="info">
               <div>
                 <i class="ri-map-pin-line"></i>
-                <p>Manaitand, Dhanbad, &nbsp; Jharkhand - 826001</p>
+                <p>Dhanbad, &nbsp; Jharkhand - 826001</p>
               </div>
 
-              <div>
+           <div>
                 <i class="ri-mail-send-line"></i>
                 <p>vforvishal12@gmail.com</p>
               </div>
-
+ <!--  
               <div>
                 <i class="ri-phone-line"></i>
                 <p>+91-9073352001</p>
               </div>
-
+-->
             </div>
           </div>
 
@@ -975,7 +975,7 @@
             &copy; Copyright <strong>Voma Tech</strong>. All Rights Reserved
           </div>
           <div class="credits">
-            Designed by <a href="https://www.linkedin.com/in/vsaw">Voma Tech</a>
+            Designed by <a href="#">Voma Tech</a>
           </div>
         </div>
         <!-- <div class="col-lg-6">
