--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
             </div>
           </div> 
 
-          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -532,7 +532,7 @@
               </div>
             </div>
           </div>
--->
+
         </div>
 
       </div>
@@ -899,10 +899,10 @@
               <!-- <p>Cras fermentum odio eu feugiat. Justo eget magna fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
                -->
               <div class="social-links">
-                <a href="https://twitter.com/Vishalk38834136" class="twitter" target="_blank"><i class="icofont-twitter"></i></a>
+                <a href="#" class="twitter" target="_blank"><i class="icofont-twitter"></i></a>
                 <!-- <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
                 <a href="#" class="instagram"><i class="icofont-instagram"></i></a> -->
-                <a href="https://www.linkedin.com/in/vsaw" target="_blank" class="linkedin"><i class="icofont-linkedin"></i></a>
+                <a href="#" target="_blank" class="linkedin"><i class="icofont-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -921,7 +921,7 @@
  <!--  
               <div>
                 <i class="ri-phone-line"></i>
-                <p>+91-9073352001</p>
+                <p></p>
               </div>
 -->
             </div>
