--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-app">App</li>
-              <!-- <li data-filter=".filter-card">Card</li> -->
+              
               <li data-filter=".filter-web">Web</li>
             </ul>
           </div>
@@ -416,7 +416,7 @@
                 <h4>Web-portfolio Profile</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
-                  <a href="http://vav.netlify.app" target="_blank" title="Web-portfolio Profile"><i class="bx bx-link"></i></a>
+                  <a href="#" target="_blank" title="Web-portfolio Profile"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -429,7 +429,7 @@
                 <h4>Cocktail of the day</h4>
                 <p>App</p>
                 <div class="portfolio-links">
-                  <a href="http://sawcocktail.netlify.app" target="_blank"  title="Cocktail of the day"><i class="bx bx-link"></i></a>
+                  <a href="#" target="_blank"  title="Cocktail of the day"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
